--- a/zivo-web/package.json
+++ b/zivo-web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.32.1",
     "@inco/solana-sdk": "^0.0.2",
+    "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
