--- a/zivo-web/package.json
+++ b/zivo-web/package.json
@@ -20,7 +20,8 @@
     "buffer": "^6.0.3",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
