--- a/zivo-web/package.json
+++ b/zivo-web/package.json
@@ -16,8 +16,12 @@
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.95.3",
+    "@tanstack/react-query": "^5.90.20",
+    "@tanstack/react-query-devtools": "^5.91.2",
+    "axios": "^1.13.3",
     "bs58": "^6.0.0",
     "buffer": "^6.0.3",
+    "lightweight-charts": "^5.1.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
