--- a/zivo-web/package.json
+++ b/zivo-web/package.json
@@ -23,6 +23,7 @@
     "bs58": "^6.0.0",
     "buffer": "^6.0.3",
     "lightweight-charts": "^5.1.0",
+    "lodash": "^4.17.23",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
