--- a/zivo-v1/programs/zivo-v1/Cargo.toml
+++ b/zivo-v1/programs/zivo-v1/Cargo.toml
@@ -20,4 +20,4 @@ idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
 anchor-spl = "0.31.1"
 inco-lightning = { version = "0.1.4", features = ["cpi"] }
-inco-token = { path = "../../lightning-rod-solana/programs/inco-token", features = ["cpi"] }
+inco-token = { path = "../../../lightning-rod-solana/programs/inco-token", features = ["cpi"] }
