--- a/zivo-v1/package.json
+++ b/zivo-v1/package.json
@@ -1,14 +1,18 @@
 {
   "license": "ISC",
   "scripts": {
+    "init:market": "ts-node scripts/init-market.ts",
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.32.1",
-    "@inco/solana-sdk": "^0.0.2"
+    "@inco/solana-sdk": "^0.0.2",
+    "@solana/web3.js": "^1.98.4"
   },
   "devDependencies": {
+    "@types/node": "^20.11.30",
+    "ts-node": "^10.9.2",
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
