--- a/zivo-v1/programs/zivo-v1/Cargo.toml
+++ b/zivo-v1/programs/zivo-v1/Cargo.toml
@@ -16,6 +16,7 @@ no-idl = []
 no-log-ix-name = []
 idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 anchor-debug = []
+custom-panic = []
 
 [dependencies]
 anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
