feat: prepare zivo-web for production and update token whitelist
- Configure production deployment settings
- Add ALS5QfhVoWZ4uQgMfZmrxLEgmWkcdqcu8RvJqZd74hBf to whitelist
- Remove FNCk4ZfJqiedqWQtATsZDum2z23E9dyQ6qiG6SJTpFKP from whitelist
- Use hardcoded whitelist instead of localStorage for consistency
- Update airdrop API and order panel configurations

--- a/zivo-web/vercel.json
+++ b/zivo-web/vercel.json
@@ -1,8 +1,5 @@
 {
   "buildCommand": "yarn build",
   "installCommand": "yarn install",
-  "framework": "nextjs",
-  "env": {
-    "NEXT_PUBLIC_HELIUS_API_KEY": "@helius-api-key"
-  }
+  "framework": "nextjs"
 }
