--- a/zivo-wrap/package.json
+++ b/zivo-wrap/package.json
@@ -1,12 +1,15 @@
 {
   "license": "ISC",
   "scripts": {
+    "noir:build": "bash scripts/noir-build.sh",
+    "zk:prove": "node -r ts-node/register scripts/generate-zk-proof.ts",
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.1",
     "@inco/solana-sdk": "^0.0.2",
+    "@lightprotocol/stateless.js": "^0.22.1-alpha.1",
     "@solana/spl-token": "^0.4.14",
     "@solana/web3.js": "^1.95.8",
     "tweetnacl": "^1.0.3"
@@ -16,9 +19,12 @@
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
     "chai": "^4.3.4",
+    "circomlibjs": "^0.1.7",
+    "dotenv": "^16.4.7",
     "mocha": "^9.0.3",
     "prettier": "^2.6.2",
     "ts-mocha": "^10.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
 }
