--- a/zivo-wrap/programs/zivo-wrap/Cargo.toml
+++ b/zivo-wrap/programs/zivo-wrap/Cargo.toml
@@ -14,7 +14,7 @@ cpi = ["no-entrypoint"]
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
-idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
+idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "light-sdk/idl-build"]
 
 
 [dependencies]
@@ -22,12 +22,5 @@ anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
 anchor-spl = "0.31.1"
 inco-lightning = { version = "0.1.4", features = ["cpi"] }
 inco-token = { path = "../../../lightning-rod-solana/programs/inco-token", features = ["cpi"] }
-
-# Force older versions to avoid edition 2024 requirement
-constant_time_eq = "=0.3.1"
-blake3 = "=1.5.4"
-
-# Downgrade regex to avoid stack overflow in regex_automata
-regex = "=1.10.3"
-regex-automata = "=0.4.5"
-
+light-hasher = "5.0.0"
+light-sdk = { version = "0.18.0", features = ["anchor", "anchor-discriminator", "cpi-context"] }
