--- a/zivo-web/package.json
+++ b/zivo-web/package.json
@@ -23,6 +23,7 @@
     "bn.js": "^5.2.2",
     "bs58": "^6.0.0",
     "buffer": "^6.0.3",
+    "circomlibjs": "^0.1.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lightweight-charts": "^5.1.0",
