--- a/zivo-wrap/Anchor.toml
+++ b/zivo-wrap/Anchor.toml
@@ -6,17 +6,17 @@ resolution = true
 skip-lint = false
 
 [programs.localnet]
-zivo_wrap = "8fzEszHEo8DwWRFQUpiMaAnAYK2rAec6oT4pRcZ12gMp"
+zivo_wrap = "FNTzEqaLVS8D3ozz2hBQvPgRDf1GLJvosJzQ6FfJmZku"
 
 [programs.devnet]
-zivo_wrap = "8fzEszHEo8DwWRFQUpiMaAnAYK2rAec6oT4pRcZ12gMp"
+zivo_wrap = "FNTzEqaLVS8D3ozz2hBQvPgRDf1GLJvosJzQ6FfJmZku"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
 cluster = "devnet"
-wallet = "~/.config/solana/id.json"
+wallet = "./wallet.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
