--- a/zivo-web/package.json
+++ b/zivo-web/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "lut:create": "ts-node --project tsconfig.json scripts/create-orderbook-lut.ts"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.32.1",
@@ -33,7 +34,8 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
