--- a/zivo-web/package.json
+++ b/zivo-web/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "lightweight-charts": "^5.1.0",
     "lodash": "^4.17.23",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.563.0",
     "next": "16.1.1",
     "react": "19.2.3",
