--- a/zivo-web/package.json
+++ b/zivo-web/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint",
     "lut:create": "ts-node --project tsconfig.json scripts/create-orderbook-lut.ts"
